# rpiServer

./: .gitignore  CMakeLists.txt  README.md  main.c  template
include/common/: common.h  common_signal.h  common_thread.h  common_types.h
include/messages/: messages.h  messages_micro.h  messages_micro_cfm.h  messages_micro_rej.h  messages_micro_req.h  messages_types.h
include/serial/: serial_signal.h  serial_thread.h  serial_tty.h  serial_types.h
include/server/: client_handler.h  client_signal.h  server.h  server_defs.h
include/util/: double_linked_list.h  logger.h  queue.h  util.h
src/: CMakeLists.txt  main.c
src/common/: common_signal.c  common_thread.c
src/messages/: message_micro_rej.c  messages_micro_cfm.c  messages_micro_req.c  messages_types.c
src/serial/: serial_signal.c  serial_thread.c  serial_tty.c
src/server/: client_handler.c  client_signal.c  server.c
src/util/: double_linked_list.c  logger.c  queue.c
test/: CMakeLists.txt  simple_test.c
test/test_cases/messages/: messages_micro_test.c
