cmake_minimum_required(VERSION 3.2)
project(raspberry C)
set(CMAKE_C_STANDARD 11)
#set(CMAKE_C_FLAGS "-pthread -Weverything -Wdeclaration-after-statement -Wdate-time")
set(CMAKE_C_FLAGS "-pthread -Wall -pedantic -g -Werror")
add_subdirectory(src)
add_executable(raspberry main.c)
enable_testing()
target_link_libraries(raspberry PUBLIC my_test_lib)
list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
find_package(cmocka 1.1.0 REQUIRED)
include(${CMAKE_SOURCE_DIR}/cmake/Modules/AddCMockaTest.cmake)
add_subdirectory(test)
